--- a/vistas/css/plantilla.css
+++ b/vistas/css/plantilla.css
@@ -20,7 +20,7 @@ a:visited, a:link, a:focus, a:hover, a:active{
 }
 
 .barraSuperior{
-	background:#695b78;
+	background:#aa3344;
 	
 }
 
@@ -29,10 +29,17 @@ a:visited, a:link, a:focus, a:hover, a:active{
 }
 
 .backColor, .backColor a{
-	background:#a28d94;
+	background:#b4737d;
 	color:white;
 }
-
+.backColor{
+	border: 2px ;
+	border-radius: 10px;
+}
+.backColor2{
+	border: 2px solid;
+	border-radius: 25px;
+}
 .fondoBreadcrumb{
 	margin-bottom:0px;
 	background: rgba(0,0,0,0);
